--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
 
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/reporterschema
+spring.datasource.username = root
+spring.datasource.password = G0d$mack1
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+sharepointclientid = 63a4902a-cce2-459b-aa1d-0d3db56b65b3
+sharepointsecret = 85c+PTY39Of4712Jk6A9VvCiLzn91qw6W1nlqc3+6Os=
+
+jwt.secret=javainuse
