--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/reporterschema
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 jwt.secret=4230-948923-085834
+
+efaxAppID=886c66c1-7970-4214-b6f5-467fbad89b96
+
+efaxUserID=cdd8d50b-650c-4631-82a0-be4c94555bca
+
+efaxAPIkey=BMkNfjczsCvceVGQ
